# ros2_NR_manipulation_challenge

./: .gitmodules  README.md
ros2_nr_motion_control/: CMakeLists.txt  README.md  package.xml
ros2_nr_motion_control/include/robot_arm_motion_planner/: robot_arm_motion_planner.hpp
ros2_nr_motion_control/launch/: cartesian_space_trajectory.launch.py  joint_space_trajectory.launch.py  sinusoidal_trajectory.launch.py
ros2_nr_motion_control/rviz/: view_robot.rviz
ros2_nr_motion_control/src/: cartesian_space_trajectory_node.cpp  joint_angle_publisher.cpp  joint_sine_publisher.cpp  joint_space_trajectory_node.cpp
ros2_nr_motion_control/test/: test_robot_arm_motion_planner.cpp
