<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_nr_motion_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="95591405+robotcopper@users.noreply.github.com">floris</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>orocos_kdl_vendor</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
